--- a/Quantum_Assignment.ipynb
+++ b/Quantum_Assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quantum_Assignment.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOco1ITPP9L3dW5pCZ08qlr",
+      "authorship_tag": "ABX9TyMJHBLYgjkcJjHQTHe4eV6L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -335,17 +335,14 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "MwMV9oYq8SZI",
-        "colab_type": "code",
-        "colab": {}
+        "id": "_tBv4VkV-UnO",
+        "colab_type": "text"
       },
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "This Quantum Circuit, swaps b with d if a is one, otherwise swaps c with d, without leaving any effect on a"
+      ]
     }
   ]
 }
