--- a/Quantum_Assignment.ipynb
+++ b/Quantum_Assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quantum_Assignment.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNefMkxe/sIaXDtAxf1i0Mi",
+      "authorship_tag": "ABX9TyNvglzds0dGx5MBka3rpg8Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -513,17 +513,122 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_EqbnpNOHyuZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "Design a reversible circuit, using NOT, CNOT, Toffoli, and Fredkin gates, which acts on the two arbitrary inputs  a,b , and the two fixed inputs  c=0 ,  d=0 , to produce four bits  a′ ,  b′ ,  c′ ,  d′  of output, where only the  nth  output is  1  (the others are all  0 ), and  n=2b+a ."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "j5szr0IFEdVA",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ca87c566-5207-4839-e50f-508aa36edb64"
       },
       "source": [
-        ""
+        "circ4 = QuantumCircuit(4)\n",
+        "\n",
+        "a, b, c, d = 0, 1, 2, 3\n",
+        "\n",
+        "#not(a) # base case\n",
+        "# if a and not b, then we need to swap a , b\n",
+        "circ4.x(b)\n",
+        "circ4.ccx( a, b, c )  #c = a & not(b)\n",
+        "circ4.cswap( c, a, b )#do it!\n",
+        "                      #a = a or not(b) if (a & not(b)), b = not(b) or a if (a & not(b)), c = a & not(b)\n",
+        "                      \n",
+        "                      #a = a or 0      if (a & not(b)), b = not(b) or 1 if (a & not(b)), c = a & not(b)\n",
+        "\n",
+        "#circ4.ccx( a, b, c )\n",
+        "                      # ---now c = c----, c = a & not(b)\n",
+        "circ4.x(b)            # now b = b\n",
+        "\n",
+        "circ4.x(a)\n",
+        "# if b and not a, swap b and c\n",
+        "circ4.ccx( a, b, d )  #d = not(a) & b\n",
+        "circ4.cswap( d, b, c )#do it ?!\n",
+        "                      #b = b or c if (not(a) & b), c = c or b if (not(a) & b), d = not(a) & b\n",
+        "                      #b = b or 0 if (not(a) & b), c = c or 1 if (not(a) & b), d = not(a) & b\n",
+        "                      #c = a & not(b)\n",
+        "                      # a = not(a) #we need to apply not(a) only if one of the above worked (c or d)\n",
+        "circ4.cnot(c, a)\n",
+        "circ4.cnot(d, a)\n",
+        "                      #would work since not both of them are true at the same time\n",
+        "                      # a = a, b = b, c = a & not(b), d = not(a) & b\n",
+        "circ4.ccx(a, b, d)    # d = a & b"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<qiskit.circuit.instructionset.InstructionSet at 0x7f85d3b58cc0>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YhxgeS2uHosU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 168
+        },
+        "outputId": "e5f3a6e3-398d-429e-fc92-1c2f3cbcb9c7"
+      },
+      "source": [
+        "circ4.draw()"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">                     ┌───┐        ┌───┐┌───┐     \n",
+              "q_0: |0>───────■───X─┤ X ├──■─────┤ X ├┤ X ├──■──\n",
+              "        ┌───┐  │   │ ├───┤  │     └─┬─┘└─┬─┘  │  \n",
+              "q_1: |0>┤ X ├──■───X─┤ X ├──■───X───┼────┼────■──\n",
+              "        └───┘┌─┴─┐ │ └───┘  │   │   │    │    │  \n",
+              "q_2: |0>─────┤ X ├─■────────┼───X───■────┼────┼──\n",
+              "             └───┘        ┌─┴─┐ │        │  ┌─┴─┐\n",
+              "q_3: |0>──────────────────┤ X ├─■────────■──┤ X ├\n",
+              "                          └───┘             └───┘</pre>"
+            ],
+            "text/plain": [
+              "                     ┌───┐        ┌───┐┌───┐     \n",
+              "q_0: |0>───────■───X─┤ X ├──■─────┤ X ├┤ X ├──■──\n",
+              "        ┌───┐  │   │ ├───┤  │     └─┬─┘└─┬─┘  │  \n",
+              "q_1: |0>┤ X ├──■───X─┤ X ├──■───X───┼────┼────■──\n",
+              "        └───┘┌─┴─┐ │ └───┘  │   │   │    │    │  \n",
+              "q_2: |0>─────┤ X ├─■────────┼───X───■────┼────┼──\n",
+              "             └───┘        ┌─┴─┐ │        │  ┌─┴─┐\n",
+              "q_3: |0>──────────────────┤ X ├─■────────■──┤ X ├\n",
+              "                          └───┘             └───┘"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
     }
   ]
 }
